...
                    android:padding="5dp"
                    android:text="@string/text_view_psychologist"
                    android:textColor="@color/black"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:id="@+id/linearLayoutAddPsychologist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">
...
                        android:clickable="true"
                        android:contentDescription="@string/floating_action_button_add_psychologist"
                        app:srcCompat="@android:drawable/ic_input_add"
                        app:tint="@color/white"/>

                    <EditText
                        android:id="@+id/editTextPsychologistEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="20dp"
                        android:textColor="@color/black"
...
