...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="1.0">

        <Button
            android:id="@+id/buttonSportsmanNameSurnameEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/my_pink"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="10dp"
            android:textColor="@color/white"
...
