...
            android:background="@color/my_light_pink"
            android:text="@string/button_cancel_delete"
            android:textStyle="bold"
            tools:ignore="ButtonStyle,TextContrastCheck,VisualLintButtonSize"/>

        <Button
            android:id="@+id/buttonConfirmDelete"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:background="@color/my_light_pink"
            android:text="@string/button_confirm_delete"
...
